snapshots/syntax/library/statements/delete_setting/deletesetting_with_error_handling.snap
---
source: vb6parse/src/syntax/library/statements/system_interaction/delete_setting.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: OnErrorStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: OnKeyword
                  text: "On"
                - kind: Whitespace
                  text: " "
                - kind: ErrorKeyword
                  text: Error
                - kind: Whitespace
                  text: " "
                - kind: ResumeKeyword
                  text: Resume
                - kind: Whitespace
                  text: " "
                - kind: NextKeyword
                  text: Next
                - kind: Newline
                  text: "\n"
            - kind: DeleteSettingStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: DeleteSettingKeyword
                  text: DeleteSetting
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"MyApp\""
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"Settings\""
                - kind: Newline
                  text: "\n"
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: Err
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Whitespace
                  text: " "
                - kind: CallStatement
                  children:
                    - kind: Identifier
                      text: MsgBox
                    - kind: Whitespace
                      text: " "
                    - kind: StringLiteral
                      text: "\"Error deleting setting\""
                    - kind: Newline
                      text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
